--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ footer p {
                 </li>
                 <li>
                     <strong>Email</strong>
-                    <p>araktuakvps@gmail.com</p>
+                    <p>araktuakvp@gmail.com</p>
                 </li>
             </ul>
         </footer>
