--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width-device-width, initial-scale=1.0" />
-        <title>Aine Bot</title>
+        <title>Araktuak Bot</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" link rel="stylesheet" href="style.css" />
         <script src="script.js"></script>
     </head>
@@ -136,7 +136,7 @@ footer p {
       <header>
         <nav class="container">  
             <div class="logo">
-                <i class="fas fa-robot"></i><button onclick="typeWriter()" style="border-radius: 10px; background: none; opacity: 10px;"> <font id="demo" face="aladin" size="6" color="white">AineBOT<br></font> </button>
+                <i class="fas fa-robot"></i><button onclick="typeWriter()" style="border-radius: 10px; background: none; opacity: 10px;"> <font id="demo" face="aladin" size="6" color="white">AraktuakBOT<br></font> </button>
             </div>
             <ul>
                 <li><a href="#" class="selected">Home</a></li>
@@ -166,7 +166,7 @@ footer p {
                 </li>
                 <li>
                     <strong>Email</strong>
-                    <p>araktuakvp@gmail.com</p>
+                    <p>araktuakvps@gmail.com</p>
                 </li>
             </ul>
         </footer>
