--- a/about/index.html
+++ b/about/index.html
@@ -801,54 +801,54 @@ body {
         <img src="https://telegra.ph/file/86ec9f9704308d4f06afa.jpg">
       </div>
       <div class="bio">
-        <h1 class="name">Muhammad Ridwan Reynaldy</h1>
-        <p class="profession">Just an ordinary developer</p>
+        <h1 class="name">Araktuak</h1>
+        <p class="profession">player legenda seluler</p>
       </div>
     </div>
     <div class="intro-section about">
       <h1 class="title">About Me</h1>
       <p class="paragraph">
-        Never ignore anything that happens, someday you will realize and regret remember god will always give the last regret...
+        FUCK YOU :V
       </p>
     </div>
     <div class="intro-section contact">
       <h1 class="title">Contact</h1>
       <div class="info-section">
         <i class="fa fa-phone"></i>
-        <span>+62 895-3303-79186</span>
+        <span>+62 878-2023-9077</span>
       </div>
       <div class="info-section">
         <i class="fa fa-map-marker"></i>
-        <span>Jakarta Pusat, Indonesia</span>
+        <span>Cirebon, Indonesia</span>
       </div>
       <div class="info-section">
         <i class="fa fa-envelope"></i>
-        <span>anemio100@gmail.com</span>
+        <span>araktuakvps@gmail.com</span>
       </div>
     </div>
     <div class="intro-section follow">
       <h1 class="title">Follow</h1>
       <div class="info-section link">
         <i class="fa fa-github"></i>
-        <a target="_blank" rel="author" href="https://github.com/qisyana">
+        <a target="_blank" rel="author" href="https://github.com/araktuak">
           <span>Github</span>
         </a>
       </div>
       <div class="info-section link">
         <i class="fa fa-instagram"></i>
-        <a target="_blank" rel="author" href="https://instagram.com/anemio999">
+        <a target="_blank" rel="author" href="https://instagram.com/patrick_ae18">
           <span>Instagram</span>
         </a>
       </div>
       <div class="info-section link">
         <i class="fa fa-whatsapp"></i>
-        <a target="_blank" rel="author" href="https://wa.me/62895330379186?text=Assalamualaikum..">
+        <a target="_blank" rel="author" href="https://wa.me/6287820239077?text=Assalamualaikum..">
           <span>WhatsApp</span>
         </a>
       </div>
       <div class="info-section link">
         <i class="fa fa-facebook"></i>
-        <a target="_blank" rel="author" href="https://facebook.com/ridwan228">
+        <a target="_blank" rel="author" href="https://wa.me/6287820239077">
           <span>Facebook</span>
         </a>
       </div>
